--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<li><a class="smoothscroll"  href="#portfolio" title="">Hobbies</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
 						<li><a href="styles.html" title="">Style Demo</a></li>				
@@ -114,7 +114,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am <script>document.write(getAge("1991/12/10"))</script> years old man, living near the wonderful city of Toulouse in the south west of France, known for its incredible rugby team among other things :).  I've worked here for 7 years, 6 in a small company, located in the south of Toulouse, as a System Engineer. As the only IT people of the company when I started, I worked as network administrator, sysadmin and also sofware engineer. My role is to support all my compay services from creating APIs, working in frontend/backend developments to installing servers or softwares and so on.</p>
+   				<p class="lead">I am <script>document.write(getAge("1991/12/10"))</script> years old man, living near the wonderful city of Toulouse in the south west of France, known for its incredible rugby team among other things :).  I've worked here for 7 years, 6 in a small company, located in the south of Toulouse, as a System Engineer. As the only IT people of the company when I started, I worked as network administrator, sysadmin and also sofware engineer. My role is to support all my company business units from creating APIs, working in frontend/backend developments to installing servers or softwares and so on.</p>
    			</div>   			
 
    		</div>   		
@@ -173,7 +173,7 @@
 				   </li>
 				   <li>
 
-					   <div class="progress percent75"><span>75%</span></div>
+					   <div class="progress percent65"><span>65%</span></div>
 					   <strong>Javascript</strong>
 				   </li>
 				   <li>
@@ -246,7 +246,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>TerraNIS</h4>
-	   					<p>My role at TerraNIS is to help all its services to develop new features, to maintain all existing systems (servers, computers, apps,api,backends and frontends, docker containers) and new ones to come. I also have the role of network administrator.Since the beginning of the year I started learning DevOps skills and working in the Google Cloud environment. </p>
+	   					<p>My role at TerraNIS is to help all its business units to develop new features, to maintain all existing systems (servers, computers, apps,api,backends and frontends, docker containers) and new ones to come. I also have the role of network administrator.Since the beginning of the year I started learning DevOps skills and working in the Google Cloud environment. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -463,10 +463,10 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Portfolio</h5>
-   			<h1>Check Out Some of My Works.</h1>
+   			<h5>Hobbies</h5>
+   			<h1>What I do outside </h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Since a while I was interesting in music, I started learning guitar, was also interesting in learning the piano and ,even if it's not related to music, began some week ago a photography course. I love penguins, cooking (not cooking penguins) and history.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -480,13 +480,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/ramonville_night.jpg" alt="Ramonville Night city lights">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">Ramonville City lights</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  City
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -496,13 +496,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/mimosa.jpg" alt="Mimosa">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Mimosa</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Trees
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -512,13 +512,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/hauts_ramonville_sunlight.jpg"alt="Sunlight">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Ramonville Sunlight</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  City
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -528,13 +528,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/portfolio/canal_midi.jpg" alt="Canal du midi">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Canal du Midi</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Trees
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -544,13 +544,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="images/portfolio/motorcycle.jpg" alt="Honda CB125R">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Honda CB125R</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Bikes
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -560,13 +560,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
+	               	<img src="images/portfolio/sky.jpg" alt="Sky">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Sky</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  City
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -579,18 +579,18 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-ramonville-night.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Night city lights</h4>		      
+					      <p>The hights of Ramonville city by night, trying to test photos on a phone  (Oppo Find X2 Pro)</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">City</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://www.google.com/search?q=ramonville+saint-agne" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -599,18 +599,18 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-mimosa.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Mimosa</h4>		      
+					      <p>A pic of a beautiful mimosa, who doesn't love a bit of spring colors</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Trees</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://www.google.com/search?q=mimosa" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -619,19 +619,19 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-hauts_ramonville_sunlight.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Sunlight</h4>		      
+					      <p>Sunlight on the city</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">City</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
+			            <a href="https://www.google.com/search?q=ramonville+saint-agne" target="_blank">Details</a>
+						<a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
 				   </div> <!-- /modal-03 -->
@@ -639,18 +639,18 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-canal-midi.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Canal du Midi</h4>		      
+					      <p>The renown "Canal du Midi" created by Pierre-Paul Riquet</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">Trees</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://www.google.com/search?q=canal+du+midi" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -659,18 +659,18 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-motorcycle.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+						<h4>Bike</h4>		      
+						<p>Have I told you that I love my bike ? Really ? I didn't think so</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Motorcycle</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://www.google.com/search?q=Honda+CB125R" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -679,18 +679,18 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-sky.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Sky</h4>		      
+					      <p>The strange colors of the sky when the sun hits the clouds</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">City</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <!-- <a href="#">Details</a> -->
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -836,7 +836,7 @@
 						</h3>
 
 						<h5 class="stat-title">
-							Coffee Cups
+							Coffee Cups Per Day
 						</h5>
 
 					</div> <!-- /stat -->
