--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.ku-mpow.com</span>
+   					<span>https://kentinultram.github.io/website/</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
